tidy up description

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <!--Meta Keywords and Description-->
     <meta name="keywords" content="openaccess,OA,ScholarLed,Non-profit,scholar-led,academic-led,open,infrastructure,open-source">
-    <meta name="description" content="ScholarLed is a consortium of six scholar-led, not-for-profit, open access book publishers that was formed in 2018. We are seeking to develop powerful, practical ways for small-scale, scholar-led Open Access presses to grow and flourish in a publishing landscape that is changing rapidly. We want to make sure that change is for the better.">
+    <meta name="description" content="ScholarLed is a consortium of five scholar-led, not-for-profit, open access book publishers that was formed in 2018. We are seeking to develop powerful, practical ways for small-scale, scholar-led Open Access presses to grow and flourish in a publishing landscape that is changing rapidly. We want to make sure that change is for the better.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
     <meta name="web_author" content="Javier Arias, javi@openbookpublishers.com">
     <meta name="google-site-verification" content="t89whJD-hom3oldPAt8x9U7vQOQSAqFQpAtU9QzKqFI" />
@@ -48,7 +48,7 @@
       "@type": "Organization",
       "name": "ScholarLed",
       "alternateName": "ScholarLed Open Access Presses",
-      "description": "ScholarLed is a consortium of six scholar-led, not-for-profit, open access book publishers that was formed in 2018. We are seeking to develop powerful, practical ways for small-scale, scholar-led Open Access presses to grow and flourish in a publishing landscape that is changing rapidly. We want to make sure that change is for the better.",
+      "description": "ScholarLed is a consortium of five scholar-led, not-for-profit, open access book publishers that was formed in 2018. We are seeking to develop powerful, practical ways for small-scale, scholar-led Open Access presses to grow and flourish in a publishing landscape that is changing rapidly. We want to make sure that change is for the better.",
       "url": "https://scholarled.org",
       "logo": "https://scholarled.org/images/logo.png",
       "email": "info@scholarled.org",
@@ -178,7 +178,7 @@
                 <div class="section-heading">
                     <h1>An Invitation</h1>
                     <p>
-                        ScholarLed is a consortium of six scholar-led, not-for-profit, open access book publishers that was formed in 2018. Individually we comprise <a href="https://www.matteringpress.org" target="_blank">Mattering Press</a>, <a href="http://mayflybooks.org" target="_blank">MayFly Books</a>, <a href="https://meson.press" target="_blank">meson press</a>, <a href="https://www.openbookpublishers.com" target="_blank">Open Book Publishers</a>, <a href="https://openhumanitiespress.org" target="_blank">Open Humanities Press</a>, and <a href="https://punctumbooks.com" target="_blank">punctum books</a>, and collectively we are seeking to develop powerful, practical ways for small-scale, scholar-led Open Access presses to grow and flourish in a publishing landscape that is changing rapidly. We want to make sure that change is for the better.
+                        ScholarLed is a consortium of five scholar-led, not-for-profit, open access book publishers that was formed in 2018. Individually we comprise <a href="https://www.matteringpress.org" target="_blank">Mattering Press</a>, <a href="https://meson.press" target="_blank">meson press</a>, <a href="https://www.openbookpublishers.com" target="_blank">Open Book Publishers</a>, <a href="https://openhumanitiespress.org" target="_blank">Open Humanities Press</a>, and <a href="https://punctumbooks.com" target="_blank">punctum books</a>, and collectively we are seeking to develop powerful, practical ways for small-scale, scholar-led Open Access presses to grow and flourish in a publishing landscape that is changing rapidly. We want to make sure that change is for the better.
                     </p>
                      <p>
                         <b>We invite you to join us.</b> If you can provide assistance or support and want to partner with us, or if you share our goals and want to know more about how we might work together, <a href="mailto:info@scholarled.org">get in touch</a>. If you’re another OA publisher, a librarian, scholar or student who believes in what we’re doing, let us know! The invitation is open...
@@ -244,9 +244,6 @@ In the coming weeks we will publish a full outline of the COPIM project on this 
                     </a>
                     <a href="https://openhumanitiespress.org" class="col-3">
                         <img src="images/company-images/ohp.gif" alt="Open Humanities Press"/>
-                    </a>
-                    <a href="http://mayflybooks.org" class="col-3">
-                        <img src="images/company-images/mayflybooks.jpg" alt="Mayfly Books"/>
                     </a>
                   </div>
 
