add blog to resources

--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
       "sameAs": [
         "https://blog.scholarled.org",
         "https://twitter.com/scholarled",
-        "https://www.facebook.com/ScholarLed"
+        "https://www.facebook.com/ScholarLed",
+        "https://blog.scholarled.org"
       ]
     }
     </script>
@@ -525,7 +526,7 @@ In the coming weeks we will publish a full outline of the COPIM project on this 
                         <h3>MORE</h3>
                         <h2 class="section-title">Read more about our plans</h2>
                         <p class="section-subtitle">
-                          Members of ScholarLed have written elsewhere about the ethos that underlies the consortium and other groups that share our aims and with whom we work.
+                          Members of ScholarLed have written on <a href="https://blog.scholarled.org">our blog</a> and elsewhere about the ethos that underlies the consortium and other groups that share our aims and with whom we work.
                         </p>
                         <ul>
                             <li>
