add resources section

--- a/index.html
+++ b/index.html
@@ -539,6 +539,18 @@ In the coming weeks we will publish a full outline of the COPIM project on this 
                                 Janneke Adema (Coventry University/Open Humanities Press), ‘One Year Later’, 22 October 2018, <a href="http://radicaloa.disruptivemedia.org.uk/one-year-later" target="_blank">http://radicaloa.disruptivemedia.org.uk/one-year-later</a>
                             </li>
                         </ul>
+                        <h2 class="section-title">Resources</h2>
+                        <p class="section-subtitle">
+                          ScholarLed members have been developing various resources, tools, and software to support scholar-led publishing. In the spirit of community building we are sharing these here and on <a href="https://github.com/scholarled">Github</a>. Please get in touch if you have any questions about these resources.
+                        </p>
+                        <ul>
+                            <li>
+                                <a href="https://www.dropbox.com/sh/ccerkwzq533q4rz/AADqKEQeppcVdCx3oKAqJCPwa">ScholarLed Open Source Bookstand</a>
+                            </li>
+                            <li>
+                                <a href="https://github.com/ScholarLed/web">ScholarLed Website Source Code</a>
+                            </li>
+                        </ul>
                     </div>
 
                 </div>
