update path to bookstand

--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@ In the coming weeks we will publish a full outline of the COPIM project on this 
                         </p>
                         <ul>
                             <li>
-                                <a href="https://www.dropbox.com/sh/ccerkwzq533q4rz/AADqKEQeppcVdCx3oKAqJCPwa">ScholarLed Open Source Bookstand</a>
+                                <a href="https://github.com/ScholarLed/bookstand">ScholarLed Open Source Bookstand</a>
                             </li>
                             <li>
                                 <a href="https://github.com/ScholarLed/web">ScholarLed Website Source Code</a>
