--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@ You can read a full outline of the COPIM project, including details of all seven
                 <div class="section-subsection">
                     <h3 id="structure">
                         <a href="#structure" class="hash">#</a>
-                        Structure
+                        COPIM Structure
                         <a href="#structure" title="Hightlight text to annotate." class="annotate-btn" data-hypothesis-trigger=""><i class="h-icon-highlight js-highlight-btn"></i> Annotate</a>
                     </h3>
                     <p>
