Add links to OAPEN collection

--- a/index.html
+++ b/index.html
@@ -155,6 +155,9 @@
                                 <a href="#infrastructure">Open Infrastructure</a>
                             </li>
                             <li>
+                                <a href="https://www.oapen.org/topic/15632108-scholarled">Our Books</a>
+                            </li>
+                            <li>
                                 <a href="#more">More</a>
                             </li>
                             <li>
@@ -200,6 +203,7 @@ You can read a full outline of the COPIM project, including details of all seven
                 <!--Call to Action-->
                 <a href="mailto:info@scholarled.org" class="button">CONTACT US</a>
                 <a href="#infrastructure" data-hypothesis-trigger="" class="button" style="margin-left: 5px;">ANNOTATE US</a>
+                <a href="https://www.oapen.org/topic/15632108-scholarled" class="button" style="margin-left: 5px;">OUR BOOKS</a>
                 <!--End Call to Action-->
 
             </div>
