Add COPIM logo to text

--- a/index.html
+++ b/index.html
@@ -275,6 +275,9 @@
                     <p>
                     You can stay in touch with developments in COPIM’s work via its <a href="https://www.copim.ac.uk/" target="_blank">website</a>, its comprehensive <a href="https://copim.pubpub.org/" target="_blank">open documentation site</a> and via <a href="https://twitter.com/COPIMproject" target="_blank">Twitter</a>.
                     </p>
+                    <p>
+                    <a href="https://www.copim.ac.uk/" target="_blank"><img src="https://www.copim.ac.uk/images/copim-logo.png" alt="COPIM logo" style="display: block; margin-left: auto; margin-right: auto; width: 30%;"></a>
+                    </p>
                 </div>
               </div>
             </div>
