Add first article to constitution

--- a/index.html
+++ b/index.html
@@ -155,6 +155,9 @@
                                 <a href="#infrastructure">Open Infrastructure</a>
                             </li>
                             <li>
+                                <a href="/constitution.html">Constitution</a>
+                            </li>
+                            <li>
                                 <a href="https://www.oapen.org/topic/15632108-scholarled">Our Books</a>
                             </li>
                             <li>
