--- a/constitution.html
+++ b/constitution.html
@@ -84,7 +84,7 @@
             list-style-position: inside;
         }
         ol.article-sublist li {
-            margin-left: 3.4em;
+            margin-left: 2em;
         }
     </style>
 
@@ -356,7 +356,28 @@
                         <ol class="article-list">
                             <li>
                                 <ol>
-                                    <li></li>
+                                    <li>
+                                        The capital of the foundation shall be formed by:
+                                        <ol type="a" class="article-sublist">
+                                            <li>income from the foundation’s activities;</li>
+                                            <li>contributions from participants;</li>
+                                            <li>subsidies and endowments;</li>
+                                            <li>that which is acquired through testamentary dispositions and specific legacies; testamentary dispositions can only be accepted under the benefit of inventory;</li>
+                                            <li>grants and donations</li>
+                                            <li>other incomes.</li>
+                                        </ol>
+                                    </li>
+                                    <li>The capital of the foundation serves to realise its object.</li>
+                                    <li>The foundation shall not hold more capital than is reasonably required for the continuity of the work foreseen for the benefit of its objective.</li>
+                                    <li>
+                                        Capital required for the continuity of foreseen work as meant in article 3.3 is taken to mean:
+                                        <ol type="a" class="article-sublist">
+                                            <li>capital or capital components which have been acquired by the foundation pursuant to testamentary dispositions or endowments, and which, on the basis of conditions attached to said testamentary disposition or endowment, must be maintained, in real terms or otherwise;</li>
+                                            <li>capital components to the extent such maintenance follows from the foundation’s objective, and</li>
+                                            <li>to maintain assets and capital components for the foreseen purchase of assets, insofar as the foundation reasonably requires such assets for its object.</li>
+                                        </ol>
+                                    </li>
+                                    <li>The foundation may perform work or provide services at commercial rates with the objective of making a profit for purposes of financing activities that are aimed at promoting or realising its object.</li>
                                 </ol>
                             </li>
                         </ol>
