--- a/constitution.html
+++ b/constitution.html
@@ -63,6 +63,10 @@
     </script>
 
     <style>
+        br {
+            display: block;
+            margin: 0.25em 0;
+        }
         ol.article-list {
             counter-reset: item
         }
@@ -70,10 +74,11 @@
             counter-reset: item
         }
         .article-list li:not(ol.article-sublist li) {
-            display: block
+            display: block;
+            margin-bottom: 0.5em;
         }
         .article-list li:not(ol.article-sublist li):before {
-            content: counters(item, ".") " ";
+            content: counters(item, ".") ". ";
             counter-increment: item;
         }
         .article-list > li:not(ol.article-sublist li):first-child:before {
@@ -85,6 +90,75 @@
         }
         ol.article-sublist li {
             margin-left: 2em;
+        }
+        #article2 + ol {
+            counter-increment: item+1;
+        }
+        #article3 + ol {
+            counter-increment: item+2;
+        }
+        #article4 + ol {
+            counter-increment: item+3;
+        }
+        #article5 + ol {
+            counter-increment: item+4;
+        }
+        #article6 + ol {
+            counter-increment: item+5;
+        }
+        #article7 + ol {
+            counter-increment: item+6;
+        }
+        #article8 + ol {
+            counter-increment: item+7;
+        }
+        #article9 + ol {
+            counter-increment: item+8;
+        }
+        #article10 + ol {
+            counter-increment: item+9;
+        }
+        #article11 + ol {
+            counter-increment: item+10;
+        }
+        #article12 + ol {
+            counter-increment: item+11;
+        }
+        #article13 + ol {
+            counter-increment: item+12;
+        }
+        #article14 + ol {
+            counter-increment: item+13;
+        }
+        #article15 + ol {
+            counter-increment: item+14;
+        }
+        #article16 + ol {
+            counter-increment: item+15;
+        }
+        #article17 + ol {
+            counter-increment: item+16;
+        }
+        #article18 + ol {
+            counter-increment: item+17;
+        }
+        #article19 + ol {
+            counter-increment: item+18;
+        }
+        #article20 + ol {
+            counter-increment: item+19;
+        }
+        #article21 + ol {
+            counter-increment: item+20;
+        }
+        #article22 + ol {
+            counter-increment: item+21;
+        }
+        #article23 + ol {
+            counter-increment: item+22;
+        }
+        #article24 + ol {
+            counter-increment: item+23;
         }
     </style>
 
@@ -392,7 +466,20 @@
                         <ol class="article-list">
                             <li>
                                 <ol>
-                                    <li></li>
+                                    <li>The foundation shall have a board comprising a number of natural persons to be determined by the board. An incomplete board retains its powers. Any vacancies that arise will be provided for as soon as possible.</li>
+                                    <li>Board members are appointed by the council of participants.The board has the right to submit a binding nomination for the appointment of each boardmember. The binding nature may be removed from any nomination by a decision taken by thecouncil of participants carried by at least two thirds of the votes in a meeting in which at leasttwo thirds of the participants of the are present or represented. Removing the binding nature ofthe nomination can only occur within four months after it has been made known to theparticipants. If the binding nature of the nomination of one person is not removed within theaforementioned period of four months, the nominated candidate is appointed. If the board doesnot submit a binding nomination within nine months after the vacancy arises or the submittednomination is deprived of its binding force by a decision as referred to in this paragraph withinthe specified time, the council of participants may appoint at its discretion.</li>
+                                    <li>The board will appoint a chairperson, secretary and treasurer from among its members. The chairperson, the secretary and treasurer are eligible for immediate reappointment at the end of the one year term for which they are appointed. The president, the secretary and the treasurer of the board jointly form the foundation’s executive committee.</li>
+                                    <li>Board members are appointed for a maximum duration of three years and resign accordingto a schedule of resignation as adopted by the board; a board member who resigns inaccordance with the schedule is eligible for immediate re-election, consecutively or otherwise,without limitation. A person appointed to an interim vacancy will take the place on the scheduleof resignation of the person in whose vacancy he or she was appointed.</li>
+                                    <li>A board member leaves office:
+                                        <ol type="a" class="article-sublist">
+                                            <li>upon their death;</li>
+                                            <li>by being placed under administration or otherwise losing the power to freely dispose of their assets;</li>
+                                            <li>by their voluntary resignation according to the schedule mentioned in article 4.4 or otherwise;</li>
+                                            <li>by their dismissal, granted by the court in such cases as provided for by law;</li>
+                                            <li>by their dismissal, granted by the council of participants carried by at least two thirds of the votes in a meeting in which at least two thirds of the participants of the are present or represented.</li>
+                                        </ol>
+                                    </li>
+                                    <li>If one or more board members are absent or unable to act, the remaining board members orthe only remaining board member will temporarily be charged with the management of thefoundation. If all the board members are, or the only board member is, absent or unable to act,the natural person who has been or will be designated for that purpose by the council ofparticipants will temporarily be charged with the management of the foundation. The provisionsof the Constitution with respect to the board and the board member/s apply to him or her byanalogy. Such person must also convene a meeting of the council of participants as soon aspossible, at which a resolution may be passed on the appointment of one or more boardmembers.</li>
                                 </ol>
                             </li>
                         </ol>
@@ -407,7 +494,24 @@
                         <ol class="article-list">
                             <li>
                                 <ol>
-                                    <li></li>
+                                    <li>
+                                        The board is charged with the management of the foundation. Its duties include the annual adoption of a budget and a current policy plan that provides insight into the work to be carried out by the foundation for the realisation of its object, the manner in which income is to be raised, the management of the capital of the foundation and the deployment thereof.
+                                        <br/>
+                                        <br/>
+                                        The board shall ensure that the administration expenses of the foundation shall be in reasonable proportion to the expenditure for the purposes of its mission.
+                                    </li>
+                                    <li>The board is not authorised to resolve to enter into agreements for the purchase, alienation or encumbrance of registered properties or agreements in which the foundation commits itself as surety or guarantor or a joint and several debtor, stands surety for a third party or commits to provide security for a third party’s debt.</li>
+                                    <li>
+                                        Board members shall receive no remuneration, neither direct nor indirect, for the work they perform for the foundation in that capacity.
+                                        <br/>
+                                        <br/>
+                                        Remuneration is not taken to include:
+                                        <ol type="a" class="article-sublist">
+                                            <li>a reasonable, non-excessive compensation for costs incurred for the benefit of the foundation;</li>
+                                            <li>an appropriate attendance fee.</li>
+                                        </ol>
+                                    </li>
+                                    <li>Board members cannot dispose of the capital of the foundation as if it were their own capital.</li>
                                 </ol>
                             </li>
                         </ol>
