--- a/index.html
+++ b/index.html
@@ -158,6 +158,9 @@
                                 <a href="/constitution.html">Constitution</a>
                             </li>
                             <li>
+                                <a href="/join.html">Join</a>
+                            </li>
+                            <li>
                                 <a href="https://www.oapen.org/topic/15632108-scholarled">Our Books</a>
                             </li>
                             <li>
