Highlight non single-page navbar elements

--- a/constitution.html
+++ b/constitution.html
@@ -256,7 +256,7 @@
                                 <a href="/#infrastructure">Open Infrastructure</a>
                             </li>
                             <li>
-                                <a href="/constitution.html">Constitution</a>
+                                <a class="active-important" href="/constitution.html">Constitution</a>
                             </li>
                             <li>
                                 <a href="/join.html">Join</a>
