--- a/join.html
+++ b/join.html
@@ -158,7 +158,7 @@
                                 <a href="/constitution.html">Constitution</a>
                             </li>
                             <li>
-                                <a href="/join.html">Join</a>
+                                <a class="active-important" href="/join.html">Join</a>
                             </li>
                             <li>
                                 <a href="https://www.oapen.org/topic/15632108-scholarled">Our Books</a>
